4-ingress/manifest/vote-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vote
  name: vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
        - image: mohamed1780/vote
          name: vote
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              name: vote
