4-ingress/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-domain
spec:
  ingressClassName: nginx
  rules:
    - host: vote.votingapp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vote-ui
                port:
                  number: 5001
    - host: result.votingapp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: result-ui
                port:
                  number: 5000
